changed to functional and styling/apis fixed, env added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://devendra0009.github.io/KhabriBhai.github.io",
+  "homepage": "https://devendra0009.github.io/general",
   "name": "newsapp",
   "version": "0.1.0",
   "private": true,
